[gd_scene load_steps=25 format=1]

[ext_resource path="res://assets/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/title.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/menu_button_work_unpressed.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_button_work_pressed.png" type="Texture" id=4]
[ext_resource path="res://scripts/work_button.gd" type="Script" id=5]
[ext_resource path="res://assets/menu_button_relax_unpressed.png" type="Texture" id=6]
[ext_resource path="res://assets/menu_button_relax_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/menu_bag_unpressed.png" type="Texture" id=8]
[ext_resource path="res://assets/menu_bag_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/menu_quit_unpressed.png" type="Texture" id=10]
[ext_resource path="res://assets/menu_quit_pressed.png" type="Texture" id=11]
[ext_resource path="res://scripts/exit_button.gd" type="Script" id=12]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 9 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 10 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 11 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 10 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="menu" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0.902527, 0.35849 )
texture = ExtResource( 1 )
centered = false

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 92.0
margin/top = 32.0
margin/right = 555.0
margin/bottom = 97.0
custom_fonts/font = ExtResource( 2 )
text = "Clockwork Inc."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_work" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 162.0
margin/top = 206.0
margin/right = 482.0
margin/bottom = 331.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 5 )

[node name="label" type="Label" parent="button_work"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 23.0
margin/right = 237.0
margin/bottom = 88.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "Work"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_relax" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 162.0
margin/top = 391.0
margin/right = 482.0
margin/bottom = 516.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 5 )

[node name="label" type="Label" parent="button_relax"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 79.0
margin/top = 23.0
margin/right = 240.0
margin/bottom = 88.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = "Shop"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_bag" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 645.0
margin/right = 150.0
margin/bottom = 769.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
flat = false

[node name="button_exit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 504.0
margin/top = 651.0
margin/right = 627.0
margin/bottom = 775.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 12 )

[connection signal="button_down" from="button_work" to="button_work" method="_on_button_work_button_down"]

[connection signal="button_up" from="button_work" to="button_work" method="_on_button_work_button_up"]

[connection signal="pressed" from="button_work" to="button_work" method="_on_button_work_pressed"]

[connection signal="button_down" from="button_relax" to="button_relax" method="_on_button_relax_button_down"]

[connection signal="button_up" from="button_relax" to="button_relax" method="_on_button_relax_button_up"]

[connection signal="pressed" from="button_relax" to="button_relax" method="_on_button_relax_pressed"]

[connection signal="pressed" from="button_bag" to="button_work" method="_on_button_bag_pressed"]

[connection signal="pressed" from="button_exit" to="button_exit" method="_on_button_exit_pressed"]


